--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,266 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Prueba de Sass</title>
-	<link rel="stylesheet" href="css/app.css">
-</head>
-<body>
-	<!-- Acá puedes escribir el codigo de tu página -->
-	<div class="container">
-		<h1>Aca puedes !</h1>
-	</div>
-
-	
-	<!-- <script src="js/app.js"></script> -->
-</body>
+    <head>
+        <meta charset="utf-8">
+            <title>
+                Álbum Fotográfico
+            </title>
+        </meta>
+    </head>
 </html>
+<!-- Latest compiled and minified CSS -->
+<link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" rel="stylesheet">
+    <!-- Optional theme -->
+    <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" rel="stylesheet">
+        <link href="css/app.css" rel="stylesheet">
+            <script src="jquery/jquery3-3-1.js">
+            </script>
+            <!-- Latest compiled and minified JavaScript -->
+            <script crossorigin="anonymous" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+            </script>
+        </link>
+    </link>
+</link>
+<body>
+    <!--Header con logo y botones de navegación.-->
+    <div class="nav">
+        <div class="navbar-brand">
+            <a href="#">
+                <img alt="Brand" src="images/logo.png">
+                </img>
+            </a>
+        </div>
+        <ul class="nav nav-pills navbar-right">
+            <li class="" role="presentation">
+                <a href="#">
+                    Home
+                </a>
+            </li>
+            <li role="presentation">
+                <a href="#">
+                    About
+                </a>
+            </li>
+            <li role="presentation">
+                <a href="#">
+                    Contacto
+                </a>
+            </li>
+        </ul>
+    </div>
+    <!--Sección con título, descripción y botón.-->
+    <div class="jumbotron">
+        <div class="container for-about">
+            <h2>
+                Álbum Fotográfico
+            </h2>
+            <h6>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod quae eos dicta esse consequuntur ea aspernatur sit delectus, ab cum laboriosam, in eum. Nulla molestiae nostrum voluptatum rerum fugit, beatae, excepturi?
+                <br>
+                    <button class="btn btn-default navbar-btn" type="button">
+                        contactame
+                    </button>
+                </br>
+            </h6>
+        </div>
+    </div>
+    <!--Sección con imágenes, título y descripción.-->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="thumbnail">
+                    <img alt="" class="img-responsive" src="images/1.jpg">
+                    </img>
+                    <h2>
+                        Título Foto 1
+                    </h2>
+                    <p>
+                        breve descripción de la foto(lugar,año,tematica etc)
+                    </p>
+                    <div class="row">
+                        <div class="text-center">
+                            <button class="btn-default">
+                                Button
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="thumbnail">
+                    <img alt="" class="img-responsive" src="images/2.jpg">
+                    </img>
+                    <h2>
+                        Título Foto 2
+                    </h2>
+                    <p>
+                        breve descripción de la foto(lugar,año,tematica etc)
+                    </p>
+                    <div class="row">
+                        <div class="text-center">
+                            <button class="btn-default">
+                                Button
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="thumbnail">
+                    <img alt="" class="img-responsive" src="images/3.jpg">
+                    </img>
+                    <h2>
+                        Título Foto 3
+                    </h2>
+                    <p>
+                        breve descripción de la foto(lugar,año,tematica etc)
+                    </p>
+                    <div class="row">
+                        <div class="text-center">
+                            <button class="btn-default">
+                                Button
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="thumbnail">
+                    <img alt="" class="img-responsive" src="images/4.jpg">
+                    </img>
+                    <h2>
+                        Título Foto 4
+                    </h2>
+                    <p>
+                        breve descripción de la foto(lugar,año,tematica etc)
+                    </p>
+                    <div class="row">
+                        <div class="text-center">
+                            <button class="btn-default">
+                                Button
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="thumbnail">
+                    <img alt="" class="img-responsive" src="images/5.jpg">
+                    </img>
+                    <h2>
+                        Título Foto 5
+                    </h2>
+                    <p>
+                        breve descripción de la foto(lugar,año,tematica etc)
+                    </p>
+                    <div class="row">
+                        <div class="text-center">
+                            <button class="btn-default">
+                                Button
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="thumbnail">
+                    <img alt="" class="img-responsive" src="images/6.jpg">
+                    </img>
+                    <h2>
+                        Título Foto 6
+                    </h2>
+                    <p>
+                        breve descripción de la foto(lugar,año,tematica etc)
+                    </p>
+                    <div class="row">
+                        <div class="text-center">
+                            <button class="btn-default">
+                                Button
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="thumbnail">
+                    <img alt="" class="img-responsive" src="images/7.jpg">
+                    </img>
+                    <h2>
+                        Título Foto 7
+                    </h2>
+                    <p>
+                        breve descripción de la foto(lugar,año,tematica etc)
+                    </p>
+                    <div class="row">
+                        <div class="text-center">
+                            <button class="btn-default">
+                                Button
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="thumbnail">
+                    <img alt="" class="img-responsive" src="images/8.jpg">
+                    </img>
+                    <h2>
+                        Título Foto 8
+                    </h2>
+                    <p>
+                        breve descripción de la foto(lugar,año,tematica etc)
+                    </p>
+                    <div class="row">
+                        <div class="text-center">
+                            <button class="btn-default">
+                                Button
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="thumbnail fotos">
+                    <img alt="" class="img-responsive" src="images/9.jpg">
+                    </img>
+                    <h2>
+                        Título Foto 9
+                    </h2>
+                    <p>
+                        breve descripción de la foto(lugar,año,tematica etc)
+                    </p>
+                    <div class="row">
+                        <div class="text-center">
+                            <button class="btn-default">
+                                Button
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Footer con copyright, mail de contacto y logo.-->
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="text-center">
+                <a href="#">
+                    <img alt="Brand" src="images/logo.png">
+                    </img>
+                </a>
+            </div>
+        </div>
+        <div class="panel-footer">
+            <div class="text-center">
+                <div class="copyright-text">
+                    <p>
+                        CopyRight © 2017 Digital All Rights Reserved / Contáme al
+                        <a href="mailto:mimail@gmail.com">
+                            mimail@gmail.com
+                        </a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
